<resources>
    <string name="app_name">KC</string>
    <string name="app_nickname">KC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">הקיבוץ הקיפטליסטי</string>
    <string name="nav_header_subtitle">מה אפשר לתת/לקבל?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings1">תורם ? </string>
    <string name="action_settings2">מתווך ? </string>
    <string name="action_settings3">מקבל ? </string>
    <string name="more_action">עוד עובדים על זה</string>

    <string name="menu_main">KC</string>
    <string name="menu_money">כסף</string>
    <string name="menu_time">זמן</string>
    <string name="menu_food">מזון</string>
    <string name="menu_clothes">בגדים</string>
    <string name="menu_stuff">חפצים</string>
    <string name="menu_knowledge">ידע</string>
    <string name="menu_traffic">תחבורה</string>
    <string name="menu_family">משפחה</string>
    <string name="menu_housing">דיור</string>
    <string name="menu_area">שטח</string>
    <string name="menu_hobbies">תחביבים</string>
    <string name="menu_medicine">רפואה</string>
    <string name="menu_trash">פסולת</string>
    <string name="menu_music">מוזיקה</string>
    <string name="menu_games">משחקים</string>
    <string name="menu_new">חדשות הקהילה</string>
    <string name="menu_search">חיפוש</string>
    <string name="menu_profile">חלקך בקהילה</string>

    <string name="set_money">כאן תוכלו לתרום כסף</string>
    <string name="set_time">כאן תוכלו לתנדב</string>
    <string name="set_food">כאן תוכלו לתרום מזון, אוכל מוכן/ארוז וכסף לאכול</string>
    <string name="set_clothes">כאן תוכלו למסור בגדים</string>
    <string name="set_stuff">כאן תוכלו למסור כל את כל סוגי חפצים</string>
    <string name="set_knowledge">כאן תוכלו לתרום ידע, לערוך/לתקן ואפילו ללמד</string>
    <string name="set_traffic">כאן תוכלו לתרום תחבורה, תוכלו לתת טרמפ או לעזור בשילוח חבילה</string>
    <string name="set_family">כאן תוכלו לתרום  משפחה, אימוץ/אומנה ואיפלו "משפחה מאמצת"</string>
    <string name="set_housing">כאן תוכלו לתרום דיור, מגורים/כסף/רהיטים לאוכלוסיות מוחלשות</string>
    <string name="set_area">כאן תוכלו לתרום שטח, פיזי/דיגיטלי למתרות שונות</string>
    <string name="set_hobbies">כאן תוכלו לשתף את חברי הקהילה בתחביבים שלכם ולהזמין אותם להצטרף</string>
    <string name="set_medicine">כאן תוכלו לתרום רפואה, דם/אברים ואפילו פונדקאות </string>
    <string name="set_trash">כאן תוכלו לתרום פסולת מכל הסוגים </string>
    <string name="set_music">כאן תוכלו להנות מהפליילסט של הקהילה מוזיקה</string>
    <string name="set_games">כאן תוכלו משחקים</string>
    <string name="set_new">חדשות הקהילה</string>
    <string name="set_search">חיפוש</string>
    <string name="set_profile">חלקך בקהילה</string>

    <string name="get_money">כסף</string>
    <string name="get_time">זמן</string>
    <string name="get_food">מזון</string>
    <string name="get_clothes">בגדים</string>
    <string name="get_stuff">חפצים</string>
    <string name="get_knowledge">ידע</string>
    <string name="get_traffic">תחבורה</string>
    <string name="get_family">משפחה</string>
    <string name="get_housing">דיור</string>
    <string name="get_area">שטח</string>
    <string name="get_hobbies">תחביבים</string>
    <string name="get_medicine">רפואה</string>
    <string name="get_trash">פסולת</string>
    <string name="get_music">מוזיקה</string>
    <string name="get_games">משחקים</string>
    <string name="get_new">חדשות הקהילה</string>
    <string name="get_search">חיפוש</string>
    <string name="get_profile">חלקך בקהילה</string>

    <string name="title_activity_money">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_time">MainActivity</string>
    <string name="title_activity_tribute__time">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>