<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/money"
            android:title="@string/menu_money" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/hourglass"
            android:title="@string/menu_time" />
        <item
            android:id="@+id/nav_knowledge"
            android:icon="@drawable/money"
            android:title="@string/menu_money" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/hourglass"
            android:title="@string/menu_time" />
    </group>
</menu>