<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.KC.ui.bottom.home.HomeFragment"
        android:label="            KC"
        android:gravity="center"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.KC.ui.bottom.news.NewsFragment"
        android:label="@string/menu_new"
        tools:layout="@layout/news_fragment" />

    <fragment
        android:id="@+id/nav_searach"
        android:name="com.example.KC.ui.bottom.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.KC.ui.bottom.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>